# code-share

snakeGame/: CMakeLists.txt  draw.cpp  game_over.cpp  game_start.cpp  handle.cpp  init_portals.cpp  init_state.cpp  main.cpp  makefile  map.cpp  move_snake.cpp  run  run.cpp  stage.cpp
snakeGame/header/: snake_game.h
stage/: map1.cpp
test/: map.cpp
